# xpectral-quant

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml
assets/: generate_banner.py
docs/source/: conf.py  index.rst
docs/source/api/: data.rst  quant.rst
examples/data/: caching.ipynb  flatfiles_massive.ipynb  flatfiles_massive.py  flatfiles_ytd.ipynb  simulations.ipynb
examples/quant/: polars_accessors.ipynb
examples/utils/: caching.ipynb
tests/: test_flatfiles_massive.py  test_s3.py
xpectral/data/: README.md  __init__.py  flatfiles_massive.py  massive.py  rest_massive.py  simulations.py
xpectral/quant/: README.md  __init__.py  polars_accessors.py  polars_expressions.py  portfolio.py
xpectral/utils/: __init__.py  cache.py  logger.py  rate_limiter.py  s3.py
