[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xpectral"
version = "1.0.1"
description = "Quant Research Library"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "BayQuant" }
]
keywords = ["finance", "quant", "bokeh", "polars"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "bokeh==3.8.1",
    "massive>=2.0.2",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "black",                           # code formatter
    "ipykernel>=7.0.1",                # jupyter notebook support
    "furo>=2024.0",                    # sphinx theme for docs
    "myst-parser>=3.0",                # markdown support in sphinx docs
    "pre-commit",                      # git hook manager
    "sphinx>=8.0",                     # sphinx documentation generator
    "sphinx-autodoc-typehints>=2.0",   # type hint rendering in sphinx docs
]

[project.urls]
Homepage = "https://github.com/bayquant/xpectral"

[tool.black]
target-version = ["py312"]

[tool.setuptools.packages.find]
where = ["."]
include = ["xpectral*"]
