[project]
name = "xpectral-quant"
version = "1.0.1"
description = "Quant analytics and market data for Polars DataFrames"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "BayQuant" }
]
keywords = ["finance", "quant", "polars", "market-data"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "boto3>=1.34",
    "diskcache>=5.6.3",
    "massive>=2.8.0",
    "numpy>=1.26",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.2.1",
]

[project.urls]
Homepage = "https://github.com/bayquant/xpectral-quant"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6",                      # code formatter and linter
    "pre-commit>=4.4.0",              # git hook manager
    "pytest>=8.0.0",                  # test runner
    "ipykernel>=7.0.1",               # jupyter notebook support
    "furo>=2024.0",                   # sphinx theme for docs
    "myst-parser>=3.0",               # markdown support in sphinx docs
    "sphinx>=8.0",                    # sphinx documentation generator
    "sphinx-autodoc-typehints>=2.0",  # type hint rendering in sphinx docs
]

# `xpectral` is a PEP 420 namespace package shared with xpectral-chart, so it
# has no top-level __init__.py. Ship only the quant half of the namespace.
[tool.hatch.build.targets.wheel]
only-include = ["xpectral/quant", "xpectral/data", "xpectral/utils", "xpectral/py.typed"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # Line too long — handled by formatter, not linter
]

[tool.ruff.lint.isort]
known-first-party = ["xpectral"]
